web/global.css
/* General purpose begin */
html,body{height:100%;margin-bottom:1px}
label{font-weight: bold;}
hr{border:#eee 1px solid;margin:1.5em 0;}
h1, h2, h3, h4{font-weight: normal;margin-top:0;}
a{text-decoration: none;color: inherit;}
a:hover{text-decoration: underline;}
body{background: #000;}

.fs{font-size: 0.85em;} /* Set font size */
.list-unstyled{
    list-style: outside none none;
    padding-left: 0;
}
.text-center{text-align: center;}
.well {
    background-image: linear-gradient(to bottom, #e8e8e8 0%, #f5f5f5 100%);
    background-repeat: repeat-x;
    border-color: #dcdcdc;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 1px 0 rgba(255, 255, 255, 0.1);
    border-radius: 4px;
    padding: 1em;
}
.pull-right {float: right !important;}
.divider10 {
    border-bottom: 1px solid #888;
    clear: both;
    height: 1px;
    margin: 0 0 7px;
    padding: 7px 0 0;
    width: 100%;
}
.divider {height: 1em;}
.pointer{cursor: pointer;}
.block{display: block}
.clear{clear: both;}
.listtable {width:100%}
.listtable-head{font-weight:700;padding:1px}
.listtable-data{text-align:left;padding:1px}
.listtable tr:nth-child(even){background-color:#eaeaea;}
.listtable tr:nth-child(odd){background-color:#fff;}
.listtable tr:hover{background-color:#bbb;}
.listtable-marked{background-color:#b0ffb0 !important;}
.listtable tr.listtable-marked:hover{background-color:#10ff10 !important;}
.listtable thead tr{background: #bfbfbf !important;}
.errortext{}
.formerror, #customerform-errortext{background-color: #ffd3d3;}
pre.debug{background: #fff; border:2px solid red;padding:1em;}

.formfieldwithpaddingright{width: calc(100% - 0.5em)}
.formfieldwithoutpadding{width: 100%}

.modal{width: 24em !important; margin-left:-12em !important;}

.hidden-sm{display: none;}
.only-sm{display: inline;}

#search{color: black;}

.pure-button{
    border-radius: 0;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}
.button-orange, .button-orange:focus, .button-orange:hover {
    color: white;
    background-image: linear-gradient(to bottom, #f0ad4e 0%, #eb9316 100%);
    background-repeat: repeat-x;
    border-color: #e38d13;
    background-color: #e38d13;
}
.button-green, .button-green:focus, .button-green:hover {
    color: white;
    background-image: linear-gradient(to bottom, #5cb85c 0%, #419641 100%);
    background-repeat: repeat-x;
    border-color: #5cb85c;
    background-color: #5cb85c;
}

.accordion {
}
.accordion dt {
    background-image: linear-gradient(to bottom, #f5f5f5 0%, #e8e8e8 100%);
    background-repeat: repeat-x;
    background-color: #ddd;
}
.accordion dt, .accordion dd {
    padding: 10px;
    border: 1px solid #ddd;
    border-bottom: 0;
}
.accordion dt:last-of-type, .accordion dd:last-of-type {
    border-bottom: 1px solid #ddd;
}
.accordion dt a, .accordion dd a {
    display: block;
    color: black;
}
.accordion dd {
    border-top: 1px solid #ddd;
    margin: 0;
}
.accordion dd:last-of-type {
    position: relative;
    top: -1px;
}
/* General purpose end */

/* Helpers begin */
.red{background: red;}
.green{background: green;}
.blue{background: blue;}
/* Helpers end */

/* Page structure begin */
.container {margin: 0 auto;}

#row-topbar{background: #000; color: #fff;}
#row-topnav{display: none;}
#row-main{background: #fff;}
#row-footer{background: #333; color: #fff;}

#col-leftnav{display: none;}
#col-main{padding: 0.5em 0 0.5em 0;}
/* Page structure end */

#cookienotice{text-align: center;}

.button-head{margin-bottom: 0.25em;}
#button-login, #button-register{margin-top: 0.1em;}
.button-head-container{text-align: center;}

#shoppingcartinfo{
    list-style: none;
    margin: 1em;
    padding: 0;
}
#shoppingcartinfo li {
    color: #000;
    text-align: left;
}
/* Topnav begin */
#topnav{
    list-style: none;
    margin: 0;
    padding: 0;
}
#topnav li {
    float: left;
    text-align: center;
}
#topnav li a {
    background-color: #333;
    height: 2.3em;
    color: #fff;
    text-decoration: none;
    display: block;
    line-height: 2.3em;
}
#topnav-1:hover, #topnav-1.active{
    background-color: #38456B;
}
#topnav-2:hover, #topnav-2.active{
    background-color: #783878;
}
#topnav-3:hover, #topnav-3.active{
    background-color: #386B6B;
}
#topnav-4:hover, #topnav-4.active{
    background-color: #783838;
}
#topnav-5:hover, #topnav-5.active{
    background-color: #787838;
}
#topnav-6:hover, #topnav-6.active{
    background-color: #38456B;
}
#topnav-7:hover, #topnav-7.active{
    background-color: #783878;
}
#topnav-sub{
    list-style: none;
    margin: 0;
    padding: 0;
}
#topnav-sub li {
    float: left;
    text-align: center;
}
#topnav-sub li {border-bottom: 1px solid #ccc;}
#topnav-sub li:last-child {border-bottom: 0;}
#topnav-sub li a {
    background: #fff;
    height: 2em;
    color: #000;
    text-decoration: none;
    display: block;
    line-height: 2.3em;
}
#topnav-sub li a:hover, #topnav-sub li a.active{background: #eee !important;}
/* Topnav end */

#loginModal a{color: #000;text-decoration: underline;font-size: 80%;}

/* Leftnav begin */
#leftnav ul li{border-bottom: 1px solid #dfdfdf;}
#leftnav ul li:last-child{border-bottom: 0;}
.pure-menu{border:1px solid #dfdfdf;}
#leftnav .pure-menu-selected{background: #eee !important;}
#leftnav ul li a {color: #000;}
/* Leftnav end */

#itemoverview{margin-left: -1em;}
.itemoverview-thumbnail{margin: 1em 0 1em 1em; border: 1px solid #cdcdcd;}
.itemoverview-caption{margin: 0 0.5em;}

#item-detail-title{margin:0 0 1em 0;}
#item-detail-no{text-align: right;font-size: 0.75em;}
#item-detail-text{margin: 0 0 0 1em;}
#item-detail-size-cont, #item-detail-price-cont{padding-left: 5%;}
#item-detail-amount{width: 95%;}
#item-detail-size{width: 100%;}
#item-detail-more{margin: 0 0 0 1em;}
#item-detail-price {
    color: #b12704;
    font-size: 1.25em;
    font-weight: normal;
    margin: 1em 0 0.5em 0;
}
#item-detail-versandmwst{font-size: 0.85em; margin-bottom: 1em;}
#item-detail-img-main{}
#item-detail-img-thumbs{list-style: none; margin: 1em 0 1em 0; padding: 0;}
#item-detail-img-thumbs li{margin: 0;}
#item-detail-img-thumbs li img{width: 95%}
#item-detail-img-thumbs li{text-align: center;}
#item-detail-img-thumbs li:first-child{text-align: left;}
#item-detail-img-thumbs li:last-child{text-align: right;}
.item-detail-suggestion{text-align: center;}
.item-detail-suggestion-img{width:90%;}

.sale-listprice{text-decoration: line-through;color:#000;}
.salesprice{font-weight: bold;color: red;}

.gallery-trenner {
    background: none repeat scroll 0 0 #000;
    height: 30px;
}

#cart-wrapper{border: 1px solid #000; padding: 1em;margin-bottom:2em;}
#cart-header{display: none;}
#cart-header, #customerform-address-header, #customerform-payment-header{
    background: #000;
    color: #fff;
    padding:0.6em;
    margin-bottom:1em;
    font-weight: bold;
}
.cart-product{padding:0.6em; border-bottom: 1px solid #000;}
.cart-product-remove{color: inherit;}
#cart-summary{border-top:1px solid #000;padding:0.6em;}

#customerform-errortext, #customerform-address-wrapper, #customerform-paymeht-wrapper, #customerform-tos-wrapper, #customerform-admstate-wrapper, #customerform-shad-wrapper{
    border: 1px solid #000;
    padding: 1em;
    margin-bottom: 2em;
}
#customerform-submit{}
#customerform-submit-wrapper{padding: 0 0 2em 1em;}

#footer-text{text-align: center;padding:0.75em 0}

.pure-form-aligned .pure-control-group label {
    width: 20%;
    text-align: left;
}
.pure-form-aligned .pure-controls {
    margin: 0;
}
.customerform-payment {
    margin: 1.5em 0 0 0 !important;
}
.pure-form-aligned .pure-controls input{margin: 0 1.25em 0 0.5em;vertical-align: -0.1em}

.pure-form input[type="text"], .pure-form input[type="password"], .pure-form input[type="email"], .pure-form input[type="url"], .pure-form input[type="date"], .pure-form input[type="month"], .pure-form input[type="time"], .pure-form input[type="datetime"], .pure-form input[type="datetime-local"], .pure-form input[type="week"], .pure-form input[type="number"], .pure-form input[type="search"], .pure-form input[type="tel"], .pure-form input[type="color"], .pure-form select, .pure-form textarea{
    border-radius: 0;
}
/* Media queries begin */
@media screen and (min-width: 35.5em) { /* sm */
    .container {width: 34em;}
}
@media screen and (min-width: 48em) { /* md */
    .container {width: 46em;}
    #button-head-topnav{display: none;}
    #logo-head{padding: 1em 0 0.6em 0;}
    #row-topnav{display: inline-block !important;background: #333;}
    #topnav li a{border-right: 1px solid #fff;}
    #topnav li:first-child a{border-left: 1px solid #fff;}
    #row-main{min-height: 20em;}
    #col-leftnav-content{padding: 2em 0em 2em 0;}
    #col-leftnav{display: inline-block;}
    #col-main{padding: 2em 0 2em 1.5em;}
    #topnav-sub{display: none;}
    #cart-header{display: block;}
    .md-invisible{display: none;}
    #customerform-address-wrapper{margin:0 1em 2em 0;}
    #customerform-paymeht-wrapper, #customerform-tos-wrapper, #customerform-info-wrapper, #customerform-admstate-wrapper{margin:0 0 2em 1em;}
    #customerform-submit{margin: 0;}
    .hidden-sm{display: inherit;}
    .only-sm{display:none;}

    .pure-form-aligned .pure-control-group label {
        text-align: right;
    }
}
@media screen and (min-width: 64em) { /* lg */
    .container {width: 62em;}
}
@media screen and (min-width: 80em) { /* xl */
    .container {width: 78em;}
}
/* Media queries end */

